# training-2023-2024

bash_training/: README.md
git_training/: .feyza.swp  Untitled-1.ipynb  berk  efe.md  efe.py  feyza  hi.md  main.c  main.py
ros_task/ros_task/: CMakeLists.txt  package.xml
ros_task/ros_task/config/: controllers.yaml
ros_task/ros_task/launch/: gazebo_launch.launch  rviz.launch
ros_task/ros_task/src/: joint_position_publisher.cpp
ros_task/ros_task/urdf/: arm_model.urdf
training-cpp-final/: README.md
training-opencv/: README.md
training-pyplot/: README.md
training-python/: README.md
